feat: Added new tools and templates
Added new files for tools and templates.

1. Created a new file `promptTemplate.ts` in `src/Templates` which includes a git comment generator prompt template.
2. Added a new tool `date.diff.tool.ts` in `src/tools` which calculates the difference between two dates.
3. Created another tool `date.tool.ts` in `src/tools` which adds a certain number of milliseconds to a given date.
4. Added a `token.generator.tool.ts` in `src/tools` which generates a token for a given tenant URL, username, and password.

Please note that all new files have been created with mode 100644.

BREAKING CHANGE: These changes might affect the existing functionality as new tools and templates are added. Please update your usage accordingly.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GIT-AI-COMMIT-API",
+  "name": "git-ai-commit-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
