--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 NODE_ENV=development
 NODE_CONFIG_DIR='./src/config'
 # AZURE OPENAI SETTINGS
-OPENAI_API_KEY=3f3769443c0e4c4fbd0cafcdcf009b4f
+OPENAI_API_KEY=
 OPENAI_API_INSTANCE_NAME=somevalue-open-ai-research
 OPENAI_API_VERSION=2023-08-01-preview
 OPENAI_API_CHAT_DEPLOYMENT_NAME_GPT4=gpt4
